<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".Activity.DetailSquadActivity">

    <RelativeLayout
        android:id="@+id/relative_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_cotoutNname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_cotout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_playerTeam"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#71000000">

                    <ImageView
                        android:id="@+id/img_playerCutout"
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/cardview_shadow_start_color" />

                    <TextView
                        android:id="@+id/tv_playerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_playerCutout"
                        android:text="@string/name_player"
                        android:textAlignment="center"
                        android:textColor="@color/cyan"
                        android:textSize="9pt"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_playerPosition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_playerName"
                        android:text="@string/position"
                        android:textAlignment="center"
                        android:textColor="@color/cyan"
                        android:textStyle="italic" />
                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_sosmed"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/linear_cotoutNname"
            android:layout_marginBottom="5dp"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_playerFb"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/fb" />

            <ImageView
                android:id="@+id/img_playerTwiter"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/twitter" />

            <ImageView
                android:id="@+id/img_playerIg"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ig" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/table_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_sosmed"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/player_name_squad"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerNameBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/player_name_squad" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/position"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerPositionBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/position" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nationality"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/nationality" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/place_date_of_birth"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerPlaceDateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/place_date_of_birth" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height_and_weight"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerHeightNWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/height_and_weight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_signed"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerDateSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/date_signed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transfer_fee"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerSigning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/transfer_fee" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salary"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/tv_playerWage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/salary" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_playerDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/table_bio"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/img_playerThumb"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginBottom="3dp"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/tv_notPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/player_image_not_found"
                    android:textAlignment="center"
                    android:textColor="#a7a0a0"
                    android:textSize="11pt"
                    android:textStyle="italic"
                    android:visibility="invisible" />

            </RelativeLayout>


            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/tv_playerDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/player_descripton" />
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
    </RelativeLayout>


</ScrollView>