<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    tools:context=".DetailLeagueActivity">

    <LinearLayout
        android:id="@+id/linearlayout_fanart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_leagueFanart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_fanartNtrophy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_fanart"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearlayout_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_leagueLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <TextView
                android:id="@+id/tv_leagueLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/league_logo"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_trophy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_leagueTrophy"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <TextView
                android:id="@+id/tv_leagueTrophy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/league_trophy"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_fanartNtrophy"
        android:layout_marginTop="5dp">

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/tv_LeagueDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_league" />
    </ScrollView>


</RelativeLayout>