<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".Activity.DetailTeamActivity"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/scrollView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/relative_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/relative_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp">
                <FrameLayout
                    android:id="@+id/frame_fanart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp">

                    <ImageView
                        android:id="@+id/img_teamFanart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitXY" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#71000000">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_teamBadgeDetail"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:padding="3dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            app:civ_fill_color="@color/cardview_shadow_start_color"/>

                        <TextView
                            android:id="@+id/tv_teamNameDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_teamBadgeDetail"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="2dp"
                            android:background="@android:color/transparent"
                            android:text="@string/team_name"
                            android:textAlignment="center"
                            android:textColor="@color/cyan"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_teamManager"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_teamNameDetail"
                            android:background="@android:color/transparent"
                            android:text="@string/name_manager"
                            android:textAlignment="center"
                            android:textStyle="italic"
                            android:textColor="@color/cyan"/>
                    </RelativeLayout>

                </FrameLayout>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/linear_contact"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/relative_frame"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_web"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/web" />

                <ImageView
                    android:id="@+id/img_fb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/fb" />

                <ImageView
                    android:id="@+id/img_twiter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/twitter" />
                <ImageView
                    android:id="@+id/img_youtube"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/youtube"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/img_ig"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ig" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_contact"
                android:orientation="vertical"
                android:layout_marginBottom="5dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
                    <ImageView
                        android:id="@+id/img_banner"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginBottom="3dp" />
                    <TextView
                        android:id="@+id/tv_notBanner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/banner_not_found"
                        android:textSize="11pt"
                        android:textStyle="italic"
                        android:textColor="#a7a0a0"
                        android:textAlignment="center"
                        android:gravity="center_vertical"
                        android:visibility="invisible"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/img_jerseyTeam"
                        android:layout_width="100dp"
                        android:layout_height="150dp" />
                   <!--didalam scroll view menggunakan nested Scroll view-->
                    <android.support.v4.widget.NestedScrollView
                        android:id="@+id/scrollView_desc"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="3dp">

                        <me.biubiubiu.justifytext.library.JustifyTextView
                            android:id="@+id/tv_teamDesc"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/description_team" />
                    </android.support.v4.widget.NestedScrollView>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_stadion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/linear_banner">
                <ImageView
                    android:id="@+id/img_teamStadion"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="3dp"/>
                <TextView
                    android:id="@+id/tv_nameStadionTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_stadion"
                    android:textAlignment="center"
                    android:textSize="11pt"
                    android:textStyle="italic|bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_stadiumLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stadium_location"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tv_stadiumCapacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stadium_capacity"
                        android:layout_weight="1"/>
                </LinearLayout>
                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/scrollView_descStadion"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/tv_stadiumDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/description_stadium" />
                </android.support.v4.widget.NestedScrollView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>